--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <tr>
                     <td>
                         <div class="botonMenu">
-                            <a href="Menu/Tocadores/index.html">
+                            <a href="Menu/Tocadores/index.html" class="sinEstilo">
                                 <section class="mueble">
                                     <h3>
                                         Tocadores
@@ -59,101 +59,117 @@
                                 </section>
                             </a>
                         </div>
-                        <section class="mueble">
-                            <h3>
-                                Roperos
-                            </h3>
-                            <div class="iconos zoom">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
-                                    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
-                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" />
-                                    <path
-                                        d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                                    <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                                    <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                                    <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                                </svg>
-                            </div>
-                            <p>
-                                Roperos para ordenar todo
-                            </p>
-                        </section>
+                        <div class="botonMenu">
+                            <a href="Menu/Tocadores/index.html" class="sinEstilo">
+                                <section class="mueble">
+                                    <h3>
+                                        Roperos
+                                    </h3>
+                                    <div class="iconos zoom">
+                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon icon-tabler icon-tabler-palette" width="40" height="40"
+                                            viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" />
+                                            <path
+                                                d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                                            <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                                            <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                                            <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                                        </svg>
+                                    </div>
+                                    <p>
+                                        Roperos<br>para ordenar todo
+                                    </p>
+                                </section>
+                            </a>
+                        </div>
                     </td>
                     <td>
-                        <section class="mueble">
-                            <h3>
-                                Camas, bases y buros
-                            </h3>
-                            <div class="iconos zoom">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed"
-                                    width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#000000"
-                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                    <path d="M7 9m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-                                    <path d="M22 17v-3h-20" />
-                                    <path d="M2 8v9" />
-                                    <path d="M12 14h10v-2a3 3 0 0 0 -3 -3h-7v5z" />
-                                </svg>
+                        <div class="botonMenu">
+                            <a href="Menu/Tocadores/index.html" class="sinEstilo">
+                                <section class="mueble">
+                                    <h3>
+                                        Camas, bases y buros
+                                    </h3>
+                                    <div class="iconos zoom">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed"
+                                            width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#000000"
+                                            fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                            <path d="M7 9m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                                            <path d="M22 17v-3h-20" />
+                                            <path d="M2 8v9" />
+                                            <path d="M12 14h10v-2a3 3 0 0 0 -3 -3h-7v5z" />
+                                        </svg>
 
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
-                                    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
-                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" />
-                                    <path
-                                        d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                                    <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                                    <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                                    <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                                </svg>
-                            </div>
-                            <p>
-                                Bases y cabeceras para dormir,<br> buros para guardar documentos
-                            </p>
-                        </section>
+                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon icon-tabler icon-tabler-palette" width="40" height="40"
+                                            viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" />
+                                            <path
+                                                d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                                            <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                                            <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                                            <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                                        </svg>
+                                    </div>
+                                    <p>
+                                        Bases y cabeceras para dormir,<br> buros para guardar documentos
+                                    </p>
+                                </section>
+                            </a>
+                        </div>
+                        <div class="botonMenu">
+                            <a href="Menu/Tocadores/index.html" class="sinEstilo">
+                                <section class="mueble">
+                                    <h3>
+                                        Muebles para sala
+                                    </h3>
+                                    <div class="iconos zoom">
 
-                        <section class="mueble">
-                            <h3>
-                                Muebles para sala
-                            </h3>
-                            <div class="iconos zoom">
+                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon icon-tabler icon-tabler-sofa" width="60" height="60"
+                                            viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                            <path
+                                                d="M4 11a2 2 0 0 1 2 2v1h12v-1a2 2 0 1 1 4 0v5a1 1 0 0 1 -1 1h-18a1 1 0 0 1 -1 -1v-5a2 2 0 0 1 2 -2z" />
+                                            <path d="M4 11v-3a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v3" />
+                                            <path d="M12 5v9" />
+                                        </svg>
 
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sofa"
-                                    width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#000000"
-                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                    <path
-                                        d="M4 11a2 2 0 0 1 2 2v1h12v-1a2 2 0 1 1 4 0v5a1 1 0 0 1 -1 1h-18a1 1 0 0 1 -1 -1v-5a2 2 0 0 1 2 -2z" />
-                                    <path d="M4 11v-3a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v3" />
-                                    <path d="M12 5v9" />
-                                </svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon icon-tabler icon-tabler-desk" width="60" height="60"
+                                            viewBox="0 0 24 24" stroke-width="2" stroke="#000000" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                            <path d="M3 6h18" />
+                                            <path d="M4 6v13" />
+                                            <path d="M20 19v-13" />
+                                            <path d="M4 10h16" />
+                                            <path d="M15 6v8a2 2 0 0 0 2 2h3" />
+                                        </svg>
 
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-desk"
-                                    width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#000000"
-                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                    <path d="M3 6h18" />
-                                    <path d="M4 6v13" />
-                                    <path d="M20 19v-13" />
-                                    <path d="M4 10h16" />
-                                    <path d="M15 6v8a2 2 0 0 0 2 2h3" />
-                                </svg>
-
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
-                                    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
-                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" />
-                                    <path
-                                        d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                                    <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                                    <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                                    <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                                </svg>
-                            </div>
-                            <p>
-                                Salas comodas a precios comodos
-                            </p>
-                        </section>
+                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                            class="icon icon-tabler icon-tabler-palette" width="40" height="40"
+                                            viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                                            stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" />
+                                            <path
+                                                d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                                            <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                                            <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                                            <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                                        </svg>
+                                    </div>
+                                    <p>
+                                        Salas comodas a precios comodos
+                                    </p>
+                                </section>
+                            </a>
+                        </div>
                     </td>
                 </tr>
             </table>
